# lindsey-provenance

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  pyproject.toml
docs/: ARCHITECTURE.md  METHODOLOGY.md
examples/hello-world/: README.md  run.sh
keys/: brad_authorship.pub
lindsey_provenance/: __init__.py  _root.py  assimilate_brief.py  audit.py  cli.py  config.py  freeze_manifest.py  ip_extract.py  new_project.py  proof_state.py  purge_selftest.py  run_phase.py  sign_ip.py  status.py
templates/: BUILDER_PROMPT_TEMPLATE.md  CLIENT_BRIEF_TRIAGE_TEMPLATE.md  EVIDENCE_AUDIT_CHECKLIST.md  IP_JOURNAL_TEMPLATE.md  LAB_NOTEBOOK_TEMPLATE.md  PHASE_TEMPLATE.md  PROJECT_INTAKE_SCHEMA.json  PROJECT_INTAKE_TEMPLATE.md
