[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lindsey-provenance"
version = "0.1.0"
description = "A discipline for LLM-collaborative engineering with cryptographic provenance."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Brad M. Lindsey"},
]
keywords = ["llm", "provenance", "research-engineering", "phase-chain", "audit", "lindsey-provenance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
intake = []
docx = ["python-docx>=0.8"]
dev = ["pytest>=7"]

[project.scripts]
lindsey-provenance = "lindsey_provenance.cli:main"

[project.urls]
Homepage = "https://github.com/bradmlindsey/lindsey-provenance"
Documentation = "https://github.com/bradmlindsey/lindsey-provenance/tree/main/docs"
Repository = "https://github.com/bradmlindsey/lindsey-provenance"

[tool.setuptools.packages.find]
include = ["lindsey_provenance*"]
